Menu should be correctly aligned on mobile now

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ body {
     }
     .nav__li {
         display: inherit;
+        margin-left: -10px;
     }
 }
 
